[project]
name = "mcp-rmm"
version = "0.1.0"
description = "MCP Remote Management Module - Auth0 JWT Token Manager for AI agents"
readme = "README.md"
authors = [
    { name = "AI-Based Firmware Upgradation System", email = "admin@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]
keywords = ["mcp", "auth0", "jwt", "token", "management", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Security :: Cryptography"
]

[project.urls]
Homepage = "https://github.com/anupam-123/AI--based-firmware-upgradation-system"
Repository = "https://github.com/anupam-123/AI--based-firmware-upgradation-system"
Issues = "https://github.com/anupam-123/AI--based-firmware-upgradation-system/issues"

[project.scripts]
mcp-rmm = "mcp_rmm.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_rmm"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]
